automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,8 @@
     "    travel_destinations.append(fav_dest)\n",
     "    return fav_dest\n",
     "favorite_destination()\n",
-    "travel_destinations[-1] # 'madagascar'\n"
+    "travel_destinations[-1] # 'madagascar'\n",
+    "travel_dis\n"
    ]
   },
   {
