automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,16 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'madagascar'"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
     "    return fav_dest\n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'\n",
-    "travel_dis\n"
+    "travel_destinations\n"
    ]
   },
   {
