--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,11 @@
     "    cap_dest = []\n",
     "    for country in travel_destinations:\n",
     "        cap_dest.append(country.title())\n",
-    "    return cap_dest"
+    "    return cap_dest\n",
+    "\n",
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def capitalize_countries():\n",
+    "    "
    ]
   },
   {
