--- a/index.ipynb
+++ b/index.ipynb
@@ -238,6 +238,7 @@
     "\n",
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    cap_dest = []\n",
     "    "
    ]
   },
