--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    cap_dest = []\n",
-    "    "
+    "    for country in travel_destinations:\n",
+    "        "
    ]
   },
   {
