automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
     "def capitalize_countries():\n",
     "    cap_dest = []\n",
     "    for country in travel_destinations:\n",
-    "        "
+    "        cap_dest.append(country.titl)"
    ]
   },
   {
