automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,8 @@
     "def capitalize_countries():\n",
     "    cap_dest = []\n",
     "    for country in travel_destinations:\n",
-    "        cap_dest.append(country.titl)"
+    "        cap_dest.append(country.title())\n",
+    "    return cap_dest"
    ]
   },
   {
