automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,14 +253,12 @@
     "    cap_dest = []\n",
     "    for country in travel_destinations:\n",
     "        cap_dest.append(country.title())\n",
-    "    return cap_dest\n",
-    "\n",
-    "cap_dest"
+    "    return cap_dest\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +267,7 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
